web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-lhs-pat/strict-mode-parent-async-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,13)
3|    async ({await}) => {
 |           ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,13)
3|    async ({await}) => {
 |           ^
